<resources>
    <string name="app_name">DMforU</string>
    <string name="shared_pref_key">YDKM_DB</string>
    <string name="school">학교</string>
    <string name="dmu">동양미래대학교</string>
    <string name="dmu_url">www.dongyang.ac.kr</string>

    <!-- main menu -->
    <string name="menu_main_bottom_home">공지</string>
    <string name="menu_main_bottom_calendar">일정</string>
    <string name="menu_main_bottom_setting">설정</string>
    <string name="menu_main_bottom_cafeteria">식단</string>

    <!-- department -->
    <string name="department_title">학과선택</string>
    <string name="department_snackbar_title">학과 선택을 마치셨나요?</string>
    <string name="department_snackbar_positive_button">확인</string>
    <string name="department_search_message">소속 학과를 검색해주세요.</string>
    <string name="department_title_main">소속 학과를 선택하면,</string>
    <string name="department_title_sub">해당 학과의 공지만 바로 알려줘요.</string>
    <string name="department_next">다음</string>
    <string name="department_complete">완료</string>

    <!-- notice -->
    <string name="notice_title">공지사항</string>
    <string name="notice_tab_university">대학 공지</string>
    <string name="notice_tab_department">학과 공지</string>
    <string name="notice_search_message">검색어를 입력해주세요.</string>

    <!-- detail -->
    <string name="detail_title">상세보기</string>
    <string name="detail_file_not_found_message">&#128517; 첨부 파일이 존재하지 않습니다.</string>
    <string name="detail_download_description">다운로드를 진행 중입니다.</string>
    <string name="detail_download_fail">다운로드를 실패했습니다.\n다시 시도해주세요.</string>
    <string name="detail_download_success">파일 다운로드가 완료되었습니다.</string>
    <string name="detail_download_permission">파일 다운로드 권한을 허용해주십시오.</string>
    <string name="detail_write_permission_dialog_title">파일 접근 권한 허용을 거부하였습니다.</string>
    <string name="detail_write_permission_dialog_message">파일을 다운로드 하기 위해서는 접근 권한이 필요합니다. 권한을 허용하시겠습니까?</string>
    <string name="detail_write_permission_dialog_ok">설정</string>
    <string name="detail_write_permission_dialog_no">취소</string>

    <!-- schedule -->
    <string name="schedule_title">학사일정</string>

    <!-- setting -->
    <string name="setting_title">설정</string>
    <string name="setting_university">대학 공지</string>
    <string name="setting_notice">알림 설정</string>
    <string name="setting_sw">컴퓨터소프트웨어공학과</string>
    <string name="setting_department">학과 공지</string>
    <string name="setting_edit_department">학과 설정</string>
    <string name="setting_keyword">키워드</string>
    <string name="setting_keyword_alarm">키워드 설정</string>
    <string name="setting_keyword_switch">키워드 알림 설정</string>
    <string name="setting_keyword_choice">키워드 선택</string>
    <string name="setting_app_info">앱 정보</string>
    <string name="setting_app_help">문의하기</string>
    <string name="setting_app_personal_policy">개인정보 처리방침</string>
    <string name="setting_app_version">앱 버전</string>
    <string name="setting_app_license">오픈소스 라이선스</string>

    <!-- calendar -->
    <string name="calendar_year">년</string>
    <string name="calendar_month">월</string>

    <!-- keyword -->
    <string name="keyword_title">키워드 선택</string>
    <string name="keyword_title_main">키워드를 설정하면,</string>
    <string name="keyword_title_sub">해당 키워드의 공지를 볼 수 있어요.</string>
    <string name="keyword_complete">완료</string>
    <string name="keyword_next">다음</string>
    <string name="keyword_class">수업</string>
    <string name="keyword_class_exam">시험</string>
    <string name="keyword_class_course">수강</string>
    <string name="keyword_class_lecture">특강</string>
    <string name="keyword_class_season">계절학기</string>
    <string name="keyword_money">장학금</string>
    <string name="keyword_money_scholarship">장학</string>
    <string name="keyword_money_nationalScholarship">국가장학</string>
    <string name="keyword_money_tuition">등록</string>
    <string name="keyword_academic">학적</string>
    <string name="keyword_academic_leave">휴학</string>
    <string name="keyword_academic_return">복학</string>
    <string name="keyword_academic_graduation">졸업</string>
    <string name="keyword_academic_transfer">전과</string>
    <string name="keyword_academic_drop">학기포기</string>
    <string name="keyword_employment">취업</string>
    <string name="keyword_employment_recruitment">채용</string>
    <string name="keyword_employment_contest">공모전</string>
    <string name="keyword_employment_field">현장실습</string>
    <string name="keyword_employment_competition">대회</string>
    <string name="keyword_employment_service">봉사</string>
    <string name="keyword_etc">기타</string>
    <string name="keyword_etc_dormitory">기숙사</string>
    <string name="keyword_etc_club">동아리</string>
    <string name="keyword_etc_studentCouncil">학생회</string>

    <!-- error message -->
    <string name="error_unknown">네트워크 오류가 발생하였습니다.\n 잠시 후 다시 실행해주세요.</string>
    <string name="error_internal_server">서버에 오류가 발생하였습니다.\n 잠시 후 다시 실행해주세요.</string>
    <string name="error_timeout">요청 시간이 초과되었습니다.\n 잠시 후 다시 실행해주세요.</string>
    <string name="error_bad_request">잘못된 요청입니다.\n 잠시 후 다시 실행해주세요.</string>
    <string name="error_notice">공지사항을 불러올 수 없습니다.\n 잠시 후 다시 실행해주세요.</string>
    <string name="error_schedule">학사일정을 불러올 수 없습니다.\n 잠시 후 다시 실행해주세요.</string>
    <string name="error_not_found_data">데이터가 존재하지 않아요!</string>
    <string name="error_network">데이터를 불러오던 중 오류가 발생했어요!</string>
    <string name="error_refresh">다시 시도</string>

    <!-- loading -->
    <string name="loading_text">처리중</string>

    <!-- alarm -->
    <string name="alarm_title_main">키워드 알림 설정으로</string>
    <string name="alarm_title_sub">중요한 공지사항을 놓치지 마세요!</string>
    <string name="alarm_complete">시작하기</string>
    <string name="alarm_title">키워드 알림함</string>
    <string name="alarm_action_button_text">편집</string>

    <!-- cafeteria -->
    <string name="cafeteria_main">식단</string>
    <string name="cafeteria_title">금주의 식단</string>
    <string name="cafeteria_student">학생식당</string>
    <string name="cafeteria_menu">메뉴</string>
    <string name="cafeteria_lunch">점심</string>
    <string name="cafeteria_time">11:00 - 14:00, 16:30 - 18:00</string>
    <string name="cafeteria_place">8호관 3층</string>
    <string name="cafeteria_menu_weekend">&#128683; 주말에는 식당을 운영하지 않아요.</string>
    <string name="cafeteria_korean_title">백반</string>
    <string name="cafeteria_korean_subtitle">Baekban</string>
    <string name="cafeteria_korean_price">6,500원</string>
    <string name="cafeteria_korean_emoji">📋</string>
    <string name="cafeteria_another_description">*해당 사진은 AI를 통해 생성된 이미지입니다.</string>
    <string name="cafeteria_button_korean">한식🍚</string>
    <string name="cafeteria_button_another">일품🍛</string>
    <string name="cafeteria_korean">한식</string>
    <string name="cafeteria_another">일품</string>

    <!-- license -->
    <string name="license_title">오픈소스 라이센스</string>

    <!-- search -->
    <string name="search_title">검색</string>
    <string name="search_hint">검색어를 입력하세요.</string>
    <string name="search_no_result">검색 결과를 찾을 수 없어요</string>
    <string name="search_another_search">다른 키워드로 검색해보세요.</string>
    <string name="search_minimum">2글자 이상 입력해야 합니다.</string>

    <!-- toast message -->
    <string name="toast_msg_keyword">하나 이상의 키워드를 선택해주세요.</string>
    <string name="toast_msg_department">정확한 학과명을 기입해주세요.</string>

    <!-- permission dialog -->
    <string name="dialog_permission_title">기기 알림이 꺼져있습니다.</string>
    <string name="dialog_permission_content"><![CDATA[알림 설정(DMforU 설정 > 개인정보 보호 > 알림)을 활성화해야 공지 사항에 대한 키워드를 받을 수 있습니다.]]></string>
    <string name="dialog_permission_early_title">제목</string>
    <string name="dialog_permission_early_content">내용</string>
    <string name="dialog_permission_early_cancel">취소</string>
    <string name="dialog_permission_early_complete">설정 화면 이동</string>
</resources>