<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        tools:context=".ui.view.keyword.KeywordActivity">

        <TextView
            android:id="@+id/tv_keyword_title_main"
            style="@style/PretendardBold32"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/keyword_title_main"
            app:layout_constraintBottom_toTopOf="@id/tv_keyword_title_sub"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_keyword_title_sub"
            style="@style/PretendardBold24"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/keyword_title_sub"
            app:layout_constraintBottom_toTopOf="@id/keyword_onboarding_step"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_keyword_title_main" />

        <include
            android:id="@+id/keyword_onboarding_step"
            layout="@layout/layout_onboarding_step"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:paddingHorizontal="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_keyword_title_sub"
            app:stepValue="@{@string/setting_keyword_choice}" />

        <ScrollView
            android:id="@+id/sv_keyword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fillViewport="true"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toTopOf="@id/btn_keyword_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/keyword_onboarding_step">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/linearLayout_keyword_class"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        style="@style/PretendardBold20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/keyword_class"
                        android:textColor="@color/black" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroup_keyword_class"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:chipSpacingHorizontal="20dp"
                        app:chipSpacingVertical="16dp"
                        app:singleSelection="false">

                        <com.google.android.material.chip.Chip
                            style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
                            android:text="@string/keyword_class_exam" />

                        <com.google.android.material.chip.Chip
                            style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
                            android:text="@string/keyword_class_course" />

                        <com.google.android.material.chip.Chip
                            style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
                            android:text="@string/keyword_class_lecture" />

                        <com.google.android.material.chip.Chip
                            style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
                            android:text="@string/keyword_class_season" />

                    </com.google.android.material.chip.ChipGroup>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/line"
                    app:layout_constraintBottom_toTopOf="@id/linearLayout_keyword_academic"
                    app:layout_constraintTop_toBottomOf="@id/linearLayout_keyword_class" />

                <LinearLayout
                    android:id="@+id/linearLayout_keyword_academic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linearLayout_keyword_class">

                    <TextView
                        style="@style/PretendardBold20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/keyword_academic"
                        android:textColor="@color/black" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroup_keyword_academic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:chipSpacingHorizontal="20dp"
                        app:chipSpacingVertical="16dp"
                        app:singleSelection="false">

                        <com.google.android.material.chip.Chip
                            style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
                            android:text="@string/keyword_academic_leave" />

                        <com.google.android.material.chip.Chip
                            style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
                            android:text="@string/keyword_academic_return" />

                        <com.google.android.material.chip.Chip
                            style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
                            android:text="@string/keyword_academic_graduation" />

                        <com.google.android.material.chip.Chip
                            style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
                            android:text="@string/keyword_academic_transfer" />

                        <com.google.android.material.chip.Chip
                            style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
                            android:text="@string/keyword_academic_drop" />
                    </com.google.android.material.chip.ChipGroup>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/line"
                    app:layout_constraintBottom_toTopOf="@id/linearLayout_keyword_money"
                    app:layout_constraintTop_toBottomOf="@id/linearLayout_keyword_academic" />

                <LinearLayout
                    android:id="@+id/linearLayout_keyword_money"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linearLayout_keyword_academic">

                    <TextView
                        style="@style/PretendardBold20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/keyword_money"
                        android:textColor="@color/black" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroup_keyword_money"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:chipSpacingHorizontal="20dp"
                        app:chipSpacingVertical="16dp"
                        app:singleSelection="false">

                        <com.google.android.material.chip.Chip
                            style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
                            android:text="@string/keyword_money_scholarship" />

                        <com.google.android.material.chip.Chip
                            style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
                            android:text="@string/keyword_money_nationalScholarship" />

                        <com.google.android.material.chip.Chip
                            style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
                            android:text="@string/keyword_money_tuition" />
                    </com.google.android.material.chip.ChipGroup>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/line"
                    app:layout_constraintBottom_toTopOf="@id/linearLayout_keyword_employment"
                    app:layout_constraintTop_toBottomOf="@id/linearLayout_keyword_money" />

                <LinearLayout
                    android:id="@+id/linearLayout_keyword_employment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linearLayout_keyword_money">

                    <TextView
                        style="@style/PretendardBold20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/keyword_employment"
                        android:textColor="@color/black" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroup_keyword_employment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:chipSpacingHorizontal="20dp"
                        app:chipSpacingVertical="16dp"
                        app:singleSelection="false">

                        <com.google.android.material.chip.Chip
                            style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
                            android:text="@string/keyword_employment_recruitment" />

                        <com.google.android.material.chip.Chip
                            style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
                            android:text="@string/keyword_employment_contest" />

                        <com.google.android.material.chip.Chip
                            style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
                            android:text="@string/keyword_employment_competition" />

                        <com.google.android.material.chip.Chip
                            style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
                            android:text="@string/keyword_employment_field" />

                        <com.google.android.material.chip.Chip
                            style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
                            android:text="@string/keyword_employment_service" />
                    </com.google.android.material.chip.ChipGroup>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/line"
                    app:layout_constraintBottom_toTopOf="@id/linearLayout_keyword_etc"
                    app:layout_constraintTop_toBottomOf="@id/linearLayout_keyword_employment" />

                <LinearLayout
                    android:id="@+id/linearLayout_keyword_etc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linearLayout_keyword_employment">

                    <TextView
                        style="@style/PretendardBold20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/keyword_etc"
                        android:textColor="@color/black" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroup_keyword_etc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:chipSpacingHorizontal="20dp"
                        app:chipSpacingVertical="16dp"
                        app:singleSelection="false">

                        <com.google.android.material.chip.Chip
                            style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
                            android:text="@string/keyword_etc_dormitory" />

                        <com.google.android.material.chip.Chip
                            style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
                            android:text="@string/keyword_etc_club" />

                        <com.google.android.material.chip.Chip
                            style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
                            android:text="@string/keyword_etc_studentCouncil" />
                    </com.google.android.material.chip.ChipGroup>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_keyword_next"
            style="@style/PretendardRegular20"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_gray_to_blue_10dp_enabled"
            android:text="@string/keyword_next"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <variable
            name="vm"
            type="com.dongyang.android.youdongknowme.ui.view.keyword.KeywordViewModel" />
        />
    </data>
</layout>